[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-gcp-auth"
version = "0.4.1"
authors = [
  { name="Alexey Shuvalov", email="alexey@alexeyshuvalov.com" },
]
description = "Provides simplified credential fetching for Google Cloud Platform."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-auth",
    "google-auth-oauthlib",
    "requests",
    "keyring"
]

[project.urls]
"Homepage" = "https://github.com/shuvalov/simple-gcp-auth"
"Bug Tracker" = "https://github.com/shuvalov/simple-gcp-auth/issues"

[tool.setuptools.packages.find]
where = ["src"]